<resources>
    <string name="app_name">TipCalculator</string>
    <string name="check_amount">Check Amount</string>
    <string name="party_size">Party Size</string>
    <string name="button_compute_tip">Compute Tip</string>
    <string name="per_person">Per Person</string>
    <string name="tip_percent_15">15% Tip</string>
    <string name="tip_percent_20">20% Tip</string>
    <string name="tip_percent_25">25% Tip</string>
    <string name="total">Total</string>
    <string name="displayAmount">Amount: $%1$s</string>
    <string name="displayTip">Tip: $%1$s</string>
    <string name="displayTotal">Total: $%1$s</string>
</resources>
