<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/tip_percent_25"
        app:layout_constraintBottom_toTopOf="@+id/twentyfivePercentTotalValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/amountPreTip" />

    <TextView
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_compute_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkAmountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_amount"
            android:gravity="center_horizontal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/partySizeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/party_size"
            android:gravity="center_horizontal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/tip_percent_20"
        app:layout_constraintBottom_toTopOf="@+id/twentyPercentTotalValue"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/amountPreTip" />

    <TextView
        android:id="@+id/amountPreTip"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/per_person"
        app:layout_constraintBottom_toTopOf="@+id/twentyPercentTipValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalValue"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue" />

    <TextView
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/tip_percent_15"
        app:layout_constraintBottom_toTopOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountPreTip" />

    <TextView
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="480dp" />

</androidx.constraintlayout.widget.ConstraintLayout>